CSS fix for overlapping dropdown menu and map

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,15 +6,6 @@ body {
     z-index: 100;
 }
 
-/*.mini_container {*/
-/*  border-radius: 5px;*/
-/*  background-color: #f9f9f9;*/
-/*  margin: 10px;*/
-/*  padding: 15px;*/
-/*  position: relative;*/
-/*  box-shadow: 2px 2px 2px lightgrey;*/
-/*}*/
-
-/*.Select {*/
-/*    z-index: 101;*/
-/*}*/
+.Select.is-open {
+    z-index: 1003;
+}
